--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Authentication JetPack Compose</string>
+    <string name="sign_up">Sign up</string>
+    <string name="sign_in">Sign In</string>
 </resources>
